--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.4",
+        "sweetalert2": "^11.14.1"
     }
 }
